# image_editor

./: .gitignore  main.py  pyproject.toml
image_processing/: operations.py
tests/: test_open.py
ui/: main_window.py  widgets.py
